# caut-rust-ref

./: .gitignore  .travis.yml  Cargo.toml  Makefile  caut-rust-ref.cabal  readme.md  run_crucible.sh  stack.yaml
app/: Main.hs
app/Cauterize/RustRef/: Options.hs
haskell/app/: Main.hs
haskell/src/Cauterize/RustRef/: Generate.hs  Util.hs
priv/: rust_test.rs  rust_test.scm  rust_test.spec
priv/rust_test/: rust_test.rs
rust/cauterize/: Cargo.toml
rust/cauterize/src/: lib.rs
rust/example/: Cargo.toml
rust/example/schema/: rust_test.scm  rust_test.spec
rust/examples/src/: lib.rs  rust_test.rs
rust/src/: lib.rs
rust/tests/: simple.rs  simple.scm  simple.spec  test_manual.rs  test_simple.rs
src/Cauterize/RustRef/: Generate.hs  Static.hs  Tester.hs  Util.hs
static/: cauterize.rs
static/cauterize/: Cargo.toml
static/cauterize/src/: array.rs  cauterize.rs  error.rs  lib.rs  range.rs  vector.rs
static/cauterize/tests/: lib.rs
tester/schema-0/: schema.txt  specification.txt
tester/schema-0/rust/: Cargo.toml  test.sh
tester/schema-0/rust/src/: aey.rs
