[package]
name = "cauterize"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>"]

[lib]
name = "cauterize"
path = "rust/src/lib.rs"

[[test]]
name = "simple"
path = "rust/tests/test_simple.rs"

[[test]]
name = "manual"
path = "rust/tests/test_manual.rs"

[dependencies]
byteorder = "0.5"
