name:                caut-rust-ref
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jaykickliter/caut-rust-ref#readme
license:             BSD3
license-file:        LICENSE
author:              Jay Kickliter
maintainer:          jay@kickliter.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -static -fwarn-unused-imports -fwarn-name-shadowing
  exposed-modules:     Cauterize.RustRef.Generate
                     , Cauterize.RustRef.Util
                     , Cauterize.RustRef.Static
  build-depends:       base >= 4.7 && < 5
                     , cauterize >= 0.1.0.0
                     , text
                     , wl-pprint
                     , bytestring
                     , file-embed
  default-language:    Haskell2010

executable caut-rust-ref
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -static -fwarn-unused-imports -fwarn-name-shadowing
  other-modules:       Cauterize.RustRef.Options
  build-depends:       base
                     , caut-rust-ref
                     , cauterize >= 0.1.0.0
                     , optparse-applicative
                     , directory
                     , filepath
                     , text
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jaykickliter/caut-rust-ref
